[package]
name = "iota-migration-cli"
version = "0.1.0"
authors = ["Minyong Li <minyong.li@iota.org>"]
edition = "2021"
description = "A command line tool for easy migration from the legacy IOTA network to the Chrysalis IOTA network"
publish = false

[dependencies]
bee-message = { version = "0.1.6", default-features = false }
iota-client = { version = "1.1.1", default-features = false, features = ["async"] }

# iota-core does not enable bip39 feature, but we need it
iota-crypto = { version = "0.9.1", default-features = false, features = ["bip39-en"] }

clap = { version = "^2.34.0", default-features = false, features = ["color"] }
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = { version = "0.4.14", default-features = false }
rayon = { version = "1.5.1", default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["rt-multi-thread", "macros"] }

[dependencies.iota-legacy]
git = "https://github.com/iotaledger/iota.rs"
rev = "656279e628e5f9d9288477cd4d2dc4170ea4bf0e"
package = "iota-core"
default-features = false

[profile.release]
lto = true
